; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeBitmapHeapscan.c_BitmapShouldInitializeSharedState.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_nodeBitmapHeapscan.c_BitmapShouldInitializeSharedState.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i32 }

@BM_INITIAL = common dso_local global i64 0, align 8
@BM_INPROGRESS = common dso_local global i64 0, align 8
@WAIT_EVENT_PARALLEL_BITMAP_SCAN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_3__*)* @BitmapShouldInitializeSharedState to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @BitmapShouldInitializeSharedState(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i64, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  br label %4

4:                                                ; preds = %1, %28
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 2
  %7 = call i32 @SpinLockAcquire(i32* %6)
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  store i64 %10, i64* %3, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @BM_INITIAL, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %20

16:                                               ; preds = %4
  %17 = load i64, i64* @BM_INPROGRESS, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  store i64 %17, i64* %19, align 8
  br label %20

20:                                               ; preds = %16, %4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 2
  %23 = call i32 @SpinLockRelease(i32* %22)
  %24 = load i64, i64* %3, align 8
  %25 = load i64, i64* @BM_INPROGRESS, align 8
  %26 = icmp ne i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %20
  br label %33

28:                                               ; preds = %20
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 1
  %31 = load i32, i32* @WAIT_EVENT_PARALLEL_BITMAP_SCAN, align 4
  %32 = call i32 @ConditionVariableSleep(i32* %30, i32 %31)
  br label %4

33:                                               ; preds = %27
  %34 = call i32 (...) @ConditionVariableCancelSleep()
  %35 = load i64, i64* %3, align 8
  %36 = load i64, i64* @BM_INITIAL, align 8
  %37 = icmp eq i64 %35, %36
  %38 = zext i1 %37 to i32
  ret i32 %38
}

declare dso_local i32 @SpinLockAcquire(i32*) #1

declare dso_local i32 @SpinLockRelease(i32*) #1

declare dso_local i32 @ConditionVariableSleep(i32*, i32) #1

declare dso_local i32 @ConditionVariableCancelSleep(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
